--- a/packages/babel-preset-react-app/package.json
+++ b/packages/babel-preset-react-app/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "babel-preset-react-app",
+  "name": "@gkiora/babel-preset-react-app",
   "version": "10.0.1",
   "description": "Babel preset used by Create React App",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/gkio/create-fast-react-app.git",
     "directory": "packages/babel-preset-react-app"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/gkio/create-fast-react-app/issues"
   },
   "files": [
     "create.js",
