--- a/packages/cra-template-typescript/package.json
+++ b/packages/cra-template-typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-template-typescript",
+  "name": "@gkiora/cra-template-typescript",
   "version": "1.2.0",
   "keywords": [
     "react",
@@ -10,7 +10,7 @@
   "description": "The base TypeScript template for Create React App.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/gkio/create-fast-react-app.git",
     "directory": "packages/cra-template-typescript"
   },
   "license": "MIT",
@@ -18,7 +18,7 @@
     "node": ">=14"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/gkio/create-fast-react-app/issues"
   },
   "files": [
     "template",
