--- a/packages/cra-template/package.json
+++ b/packages/cra-template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-template",
+  "name": "@gkiora/cra-template",
   "version": "1.2.0",
   "keywords": [
     "react",
@@ -9,7 +9,7 @@
   "description": "The base template for Create React App.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/gkio/create-fast-react-app.git",
     "directory": "packages/cra-template"
   },
   "license": "MIT",
@@ -17,7 +17,7 @@
     "node": ">=14"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/gkio/create-fast-react-app/issues"
   },
   "files": [
     "template",
