--- a/packages/react-app-polyfill/package.json
+++ b/packages/react-app-polyfill/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "react-app-polyfill",
+  "name": "@gkiora/react-app-polyfill",
   "version": "3.0.0",
   "description": "Polyfills for various browsers including commonly used language features",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/gkio/create-fast-react-app.git",
     "directory": "packages/react-app-polyfill"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/gkio/create-fast-react-app/issues"
   },
   "engines": {
     "node": ">=14"
